2011-01-05  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* libc/stdio/open_memstream.c (internal_open_memstream_r):
	Don't limit c->max to 64*1024 on targets with SIZE_MAX < 64*1024.

2011-01-05  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* libc/xdr/xdr.c: Fix typos in #errors.

2011-01-05  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* libc/xdr/xdr_private.h: Include <stdint.h>
	* libc/xdr/xdr_rec.c: Include limits.h

2011-01-05  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* libc/Makefile.am (SUBDEFS): Remove redundant posix/stmp-def.
	* libc/Makefile.in: Regenerate.

2011-01-05  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* libc/configure.in: Remove redundant posix_dir processing.
	* libc/configure: Regenerate.

2010-12-31  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* MAINTAINERS: Change corinna@vinchen.de to corinna@vinschen.de.

2010-12-26  Christopher Faylor  <me+cygwin@cgf.cx>

	* libc/include/sys/errno.h (program_invocation_name): Declare.
	(program_invocation_short_name): Ditto.

2010-12-16  Jeff Johnston  <jjohnstn@redhat.com>

	* NEWS: Update with 1.19.0 info.
	* README: Ditto.
	* MAINTAINERS: Update.
	* acinclude.m4: Change version number to 1.19.0.
	* aclocal.m4: Regenerated.
	* configure: Ditto.
	* Makefile.am: Fix stmp-targ-include target.
	* Makefile.in: Regenerated.
	* doc/aclocal.m4: Ditto.
	* doc/configure: Ditto.
	* libc/*/aclocal.m4: Ditto.
	* libc/*/configure: Ditto.
	* libc/libc.texinfo: Ditto.
	* libm/*/aclocal.m4: Ditto.
	* libm/*/configure: Ditto.
	* libm/libm.texinfo: Ditto.
	* libc/sys/linux/shared.ld: Add VERS_1.19

2010-12-14  Jeff Johnston  <jjohnstn@redhat.com>

	* Makefile.am: Add support to copy all sub-directories of the
	sys/SYS_DIR/include directory, if they contain header files.
	* Makefile.in: Regenerated.

2010-12-08  Jeff Johnston  <jjohnstn@redhat.com>

	* libm/mathfp/sf_logarithm.c: Change isfinitef reference to isfinite.

2010-12-08  Ralf Corsepius <ralf.corsepius@rtems.org>
